--- a/mt5_cotacoes_tempo_real.ipynb
+++ b/mt5_cotacoes_tempo_real.ipynb
@@ -48,9 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simbolos = mt5.symbols_get()\n",
-    "\n",
-    "len(simbolos)"
+    "simbolos = mt5.symbols_get()"
    ]
   },
   {
@@ -77,7 +75,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mt5.symbol_select(\"WEGE3\")"
+    "tickers_ibov = ['RRRP3', 'ALSO3', 'ALPA4', 'ABEV3', 'ARZZ3', 'ASAI3', 'AZUL4', 'B3SA3', 'BPAN4', 'BBSE3', 'BBDC3', 'BBDC4', 'BRAP4', \n",
+    "                'BBAS3', 'BRKM5', 'BRFS3', 'BPAC11', 'CRFB3', 'CCRO3', 'CMIG4', 'CIEL3', 'COGN3', 'CPLE6', 'CSAN3', 'CPFE3', 'CMIN3', \n",
+    "                'CVCB3', 'CYRE3', 'DXCO3', 'ECOR3', 'ELET3', 'ELET6', 'EMBR3', 'ENBR3', 'ENGI11', 'ENEV3', 'EGIE3', 'EQTL3', 'EZTC3', \n",
+    "                'FLRY3', 'GGBR4', 'GOAU4', 'GOLL4', 'NTCO3', 'SOMA3', 'HAPV3', 'HYPE3', 'IGTI11', 'ITSA4', 'ITUB4', 'JBSS3', 'KLBN11', \n",
+    "                'RENT3', 'LWSA3', 'LREN3', 'MGLU3', 'MRFG3', 'CASH3', 'BEEF3', 'MRVE3', 'MULT3', 'PCAR3', 'PETR3', 'PETR4', 'PRIO3', 'PETZ3', \n",
+    "                'QUAL3', 'RADL3', 'RAIZ4', 'RDOR3', 'RAIL3', 'SBSP3', 'SANB11', 'SMTO3', 'CSNA3', 'SLCE3', 'SUZB3', 'TAEE11', 'VIVT3', 'TIMS3', \n",
+    "                'TOTS3', 'UGPA3', 'USIM5', 'VALE3', 'VIIA3', 'VBBR3', 'WEGE3', 'YDUQ3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted([\"WINM23\", 'WDOM23', 'IVVB11', 'DI1F24', 'DI1F25', 'SMAL11', 'CEAB3', 'KLBN11', 'WEGE3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ticker in tickers_ibov:\n",
+    "\n",
+    "    mt5.symbol_select(ticker)"
    ]
   },
   {
@@ -93,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tick = mt5.symbol_info_tick(\"PETR4\")\n",
+    "tick = mt5.symbol_info(\"WEGE3\").price_change\n",
+    "tick = mt5.symbol_info(\"WEGE3\").last\n",
     "\n",
     "print(tick)"
    ]
@@ -128,14 +160,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import yfinance as yf\n",
+    "import datetime"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = yf.download('^BVSP', start=datetime.datetime.now() - datetime.timedelta(days = 365))\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
