--- a/2024/janeiro/dados_historicos_contrato_dolar.ipynb
+++ b/2024/janeiro/dados_historicos_contrato_dolar.ipynb
@@ -74,20 +74,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.get(url)\n",
-    "\n",
-    "time.sleep(3)\n",
-    "\n",
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b02e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "local_tabela = '''\n",
     "/html/body/div/div[2]/form[1]/table[3]/tbody/tr[3]/td[3]/table\n",
     "'''\n",
-    "\n",
     "local_indice = '''\n",
     "/html/body/div/div[2]/form[1]/table[3]/tbody/tr[3]/td[1]/table\n",
-    "'''\n",
-    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aeeddaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "elemento = driver.find_element(\"xpath\", local_tabela)\n",
-    "\n",
     "elemento_indice = driver.find_element(\"xpath\", local_indice)\n",
     "\n",
     "html_tabela = elemento.get_attribute('outerHTML')\n",
@@ -97,6 +109,16 @@
     "indice = pd.read_html(html_indice)[0]\n",
     "\n",
     "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9167f011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indice"
    ]
   },
   {
@@ -149,12 +171,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fb36c3a",
+   "cell_type": "markdown",
+   "id": "92067a9b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Código na descrição\n",
+    "\n",
+    "Curtiu? Mete o like e se inscreve!"
+   ]
   },
   {
    "cell_type": "code",
@@ -213,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
