--- a/2024/fevereiro/baixando_planilha.ipynb
+++ b/2024/fevereiro/baixando_planilha.ipynb
@@ -25,9 +25,7 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "import time\n",
-    "from datetime import date\n",
-    "import os"
+    "import time"
    ]
   },
   {
@@ -37,8 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
-    "\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058ca76f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "url = 'https://www.b3.com.br/pt_br/market-data-e-indices/indices/indices-amplos/indice-ibovespa-ibovespa-composicao-da-carteira.htm'\n",
     "\n",
     "driver.get(url)"
@@ -52,10 +58,26 @@
    "outputs": [],
    "source": [
     "WebDriverWait(driver, 10).until(\n",
-    "    EC.frame_to_be_available_and_switch_to_it((By.ID, \"bvmf_iframe\")))\n",
-    "\n",
-    "planilha = driver.find_element(\"xpath\", '//*[@id=\"divContainerIframeB3\"]/div/div[1]/form/div[2]/div/div[2]/div/div/div[1]/div[2]/p/a')\n",
-    "\n",
+    "    EC.frame_to_be_available_and_switch_to_it((By.ID, \"bvmf_iframe\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad08c020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planilha = driver.find_element(\"xpath\", '//*[@id=\"divContainerIframeB3\"]/div/div[1]/form/div[2]/div/div[2]/div/div/div[1]/div[2]/p/a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "077ac310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "driver.execute_script(\"arguments[0].click();\", planilha)\n",
     "\n",
     "time.sleep(5)\n",
@@ -90,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
