--- a/2024/fevereiro/como_dobrar_seu_dinheiro.ipynb
+++ b/2024/fevereiro/como_dobrar_seu_dinheiro.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# É possível dobrar o seu dinheiro na bolsa de valores em 3 anos? | O método Monte Carlo\n",
     "\n",
-    "- Criada durante a segunda guerra mundial.\n",
+    "- Criado durante a segunda guerra mundial.\n",
     "- Nomeado em homenagem a cidade de mônaco com seus cassinos.\n",
     "- Foi criada originalmente para testar cenários do jogo de paciência.\n",
     "- Usada para estimar os possíveis resultados de um evento incerto. O acaso é principal elemento da abordagem na modelagem.\n",
@@ -19,7 +19,7 @@
     "Em quanto tempo você demoraria pra dobrar seu investimento investindo no ibovespa, o principal índice de ações do Brasil?\n",
     "Esse investimento vai permitir que você dobre o seu dinheiro com qual probabilidade?\n",
     "\n",
-    "- Tempo máximo, tempo mínimo.\n",
+    "- Tempo mínimo.\n",
     "- Janela móvel de probabilidade x tempo decorrido em ações."
    ]
   },
@@ -53,7 +53,9 @@
     "data_final = dt.datetime.now()\n",
     "data_inicial = data_final - dt.timedelta(days=10000)\n",
     "\n",
-    "precos = yf.download('^BVSP', data_inicial, data_final)['Adj Close']"
+    "precos = yf.download('^BVSP', data_inicial, data_final)['Adj Close']\n",
+    "\n",
+    "precos"
    ]
   },
   {
@@ -63,7 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "retornos = precos.pct_change()"
+    "retornos = precos.pct_change()\n",
+    "retornos"
    ]
   },
   {
@@ -149,7 +152,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0bbd0a95",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "valores_carteira = pd.DataFrame(valores_carteira)\n",
@@ -211,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
